deploy/k8s/datasophon-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: datasophon-api-service
  labels:
    app: datasophon-manager
  namespace: datasophon
spec:
  selector:
    app: datasophon-manager
  ports:
    - port: 8081
      targetPort: 8081
      name: http
    - port: 8586
      targetPort: 8586
      name: metrics
    - port: 2551
      targetPort: 2551
      name: akka
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datasophon-manager
  labels:
    app: datasophon-manager
  namespace: datasophon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datasophon-manager
  template:
    metadata:
      labels:
        app: datasophon-manager
    spec:
      containers:
        - name: datasophon-manager
          image: harbor.norintech.com/bdp/datasophon-manager:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
            - containerPort: 8586
              name: metrics
            - containerPort: 2551
              name: akka
            - containerPort: 8000
              name: debug
          resources:
            requests:
              memory: "4Gi"
              cpu: "2000m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          readinessProbe:
            httpGet:
              path: /ddh/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /ddh/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          volumeMounts:
            - name: config-volume
              mountPath: /tmp/config
            - name: hosts-file
              mountPath: /tmp/hosts
            # 添加日志卷挂载
            - name: logs-volume
              mountPath: /datasophon-manager/logs
              subPathExpr: $(POD_NAMESPACE)/datasophon-manager
          command: ['sh', '-c', 'cat /tmp/hosts >> /etc/hosts && mkdir -p /datasophon-manager/conf && cp -f /tmp/config/* /datasophon-manager/conf/ && bin/datasophon-api.sh start api && tail -F -f logs/datasophon-api.log']
      # 添加初始化容器，用于设置日志目录权限
      volumes:
        - name: config-volume
          configMap:
            name: datasophon-config
        - name: hosts-file
          hostPath:
            path: /etc/hosts
        # 添加日志卷
        - name: logs-volume
          persistentVolumeClaim:
            claimName: datasophon-logs
