deploy/k8s/datasophon-manager.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    name: "datasophon-manager"
  name: "datasophon-manager"
  namespace: datasophon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "datasophon-manager"
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        name: "datasophon-manager"
        app: "datasophon-manager"
        podConflictName: "datasophon-manager"
      annotations:
        serviceInstanceName: "datasophon-manager"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                name: "datasophon-manager"
                podConflictName: "datasophon-manager"
            namespaces:
            - "default"
            topologyKey: "kubernetes.io/hostname"
      hostPID: false
      hostNetwork: true
      containers:
      - name: "datasophon-manager"
        image: "192.168.5.200:5000/bdp/datasophon-manager:1.2.1"
        ports:
        - containerPort: 8081
        - containerPort: 8586
        - containerPort: 2551
        - containerPort: 8000
        volumeMounts:
        - name: config-volume
          mountPath: /datasophon-manager/conf
        resources:
          requests:
            memory: "512Mi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "10"
      nodeSelector:
        datasophon-manager: "true"
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-volume
        hostPath:
          path: /opt/datasophon/datasophon-manager-1.2.1/conf
          type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: datasophon-manager-service
spec:
  selector:
    app: datasophon-manager
  ports:
  - name: port-8081
    port: 8081
    targetPort: 8081
    nodePort: 30081
  - name: port-8586
    port: 8586
    targetPort: 8586
    nodePort: 30586
  - name: port-2551
    port: 2551
    targetPort: 2551
    nodePort: 32551
  - name: port-8000
    port: 8000
    targetPort: 8000
    nodePort: 30800
  type: NodePort
